--- a/worlds.html
+++ b/worlds.html
@@ -7,17 +7,18 @@
 <link rel="stylesheet" href="css/style.css" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
+<embed src="mp3/background.mp3" autoplay="true" loop="true" width="0" height="0">
 </head>
 <body>
 <h2 id="picker-title">Minecraft 基础命令</h2>
 <section id="picker-menu">
-    <div class="picker-menu-1">
+    <div class="picker-menu-1" onclick="playSound()">
         <span class="picker-header">防止爆炸破坏方块</span><br>
         <span class="picker-text">
             /gamerule mobGriefing false
         </span>
     </div>
-    <div class="picker-menu-1">
+    <div class="picker-menu-1" onclick="playSound()">
         <span class="picker-header">给所有玩家超强抗性</span><br>
         <span class="picker-text">
             /effect give @a minecraft:resistance 999999 255 true
@@ -26,10 +27,12 @@
 </section>
 
 <section class="picker-button-wrapper picker-buttons">
-  <div class="button picker-button1" id="copy-command"><span>复制选中的命令</span></div>
-  <a href="index.html">
-    <div class="button picker-button1"><span>返回</span></div>
-    </a>
+  <div class="button picker-button1" id="copy-command" onclick="playSound()"><span>复制选中的命令</span></div>
+  <a href="javascript:void(0)">
+    <div class="button picker-button1" id="but" onclick="playSoundAndRedirect()">
+      <span>返回</span>
+    </div>
+  </a>
     <a href="">
       <div class="button picker-button2" disabled><span>???</span></div>
     </a> 
@@ -43,6 +46,7 @@
       <div class="button picker-button2 grid-button6"><span>???</span></div>
     </a> 
 </section>
+
 <footer> 
     <span class="left">
         Template made by 
@@ -101,5 +105,20 @@
         });
     });
 </script>
+<script>
+    function playSound() {
+      var audio = new Audio('mp3/button.mp3');
+      audio.play();
+    }
+    function playSoundAndRedirect() {
+      var audio = new Audio('mp3/button.mp3');
+      audio.play();
+      
+      // 等待音效播放完成后再跳转
+      audio.onended = function() {
+        window.location.href = 'index.html';
+      };
+    }
+  </script>
 </body>
 </html>
